--- a/tests/5.in
+++ b/tests/5.in
@@ -3,4 +3,6 @@
 (declare-fun y () (_ BitVec 4))
 (declare-fun z () (_ BitVec 4))
 (assert
- (exists ((x (_ BitVec 4))) (and (or (bvult x y) (= x y)) (or (bvult z x) (= z x)))))
+ (exists ((x (_ BitVec 4))) (and 
+ (or (bvult x y) (= x y)) 
+ (or (bvult z x) (= z x)))))
