--- a/tests/6.in
+++ b/tests/6.in
@@ -2,8 +2,9 @@
 (set-logic BV)
 (declare-fun y () (_ BitVec 4))
 (declare-fun z () (_ BitVec 4))
+(declare-fun t () (_ BitVec 4))
 (assert
  (exists ((x (_ BitVec 4))) (and (and 
- (or (bvult y x) (= y x)) 
- (or (bvult #b0010 x) (= #b0010 x))) 
- (or (bvult z x) (= z x)))))
+ (or (bvult x (bvmul #b0011 y)) (= x (bvmul #b0011 y))) 
+ (or (bvult z x) (= z x))) 
+ (or (bvult x t) (= x t)))))
