add restoring variable names

--- a/tests/3.in
+++ b/tests/3.in
@@ -3,7 +3,7 @@
 (declare-fun y () (_ BitVec 4))
 (declare-fun z () (_ BitVec 4))
 (assert
- (exists ((x (_ BitVec 4))) (and (and 
+ (exists ((x (_ BitVec 4))) (and 
  (or (bvult y x) (= y x)) 
- (or (bvult #b0010 x) (= #b0010 x))) 
+ (or (bvult #b0010 x) (= #b0010 x)) 
  (or (bvult z x) (= z x)))))
