correct tests and fix algorithm

--- a/tests/5.in
+++ b/tests/5.in
@@ -1,8 +1,7 @@
 (set-option :produce-models true)
 (set-logic BV)
 (declare-fun y () (_ BitVec 4))
-(declare-fun z () (_ BitVec 4))
 (assert
  (exists ((x (_ BitVec 4))) (and 
- (or (bvult x y) (= x y)) 
- (or (bvult z x) (= z x)))))
+ (or (bvult (bvmul y #b0011) x) (= (bvmul y #b0011) x)) 
+ (or (bvult x (bvmul y #b1100)) (= x (bvmul y #b1100))))))
