--- a/tests/9.in
+++ b/tests/9.in
@@ -3,5 +3,5 @@
 (declare-fun y () (_ BitVec 4))
 (assert
  (exists ((x (_ BitVec 4))) (and 
- (or (bvult (bvmul y #b1110) x) (= (bvmul y #b1110) x)) 
- (or (bvult x (bvmul y #b1101)) (= x (bvmul y #b1101))))))
+ (or (bvult (bvmul x #b0100) (bvmul y #b0101)) (= (bvmul x #b0100) (bvmul y #b0101))) 
+ (or (bvult (bvmul y #b1000) (bvmul x #b1010)) (= (bvmul y #b1000) (bvmul x #b1010))))))
