correct travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
-language: 
-   - c
-   - python
+language: python
 python:
   - "3.8"
 install:
   - git clone https://github.com/boolector/boolector
   - cd boolector
-  - pip install Cython
+  - pip3 install Cython
   - ./contrib/setup-lingeling.sh
   - ./contrib/setup-btor2tools.sh
   - ./configure.sh --python && cd build && make
-  - pip install pyboolector
+  - pip3 install pyboolector
   - cd ../../
 script:
   - make
