--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - git clone https://github.com/boolector/boolector
   - cd boolector
-  - sudo apt-get install python-dev python3-dev
+  - sudo apt-get install python3-dev python3-pip python3-tk python3-lxml python3-six
   - pip install Cython
   - ./contrib/setup-lingeling.sh
   - ./contrib/setup-btor2tools.sh
