correct .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.8"
 install:
   - git clone https://github.com/boolector/boolector
-  - cd boolector 
+  - cd boolector
+  - sudo apt-get install cmake
   - pip3 install Cython
   - ./contrib/setup-lingeling.sh
   - ./contrib/setup-btor2tools.sh
