--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: python
 python:
-  - "3.8"
+  - "3.8-dev"
 os: linux
 dist: focal 
 before_install:
+  - cd $HOME
   - git clone https://github.com/boolector/boolector
   - cd boolector
   - pip3 install Cython
   - ./contrib/setup-lingeling.sh
   - ./contrib/setup-btor2tools.sh
-  - sudo apt-get install python3-dev python3-setuptools
   - ./configure.sh --python
   - cd build
   - make
