--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "3.8-dev"
+  - "3.8"
 os: linux
 dist: focal 
 before_install:
@@ -10,6 +10,7 @@ before_install:
   - pip3 install Cython
   - ./contrib/setup-lingeling.sh
   - ./contrib/setup-btor2tools.sh
+  - sudo apt-get install python3-dev python3-setuptools
   - ./configure.sh --python
   - cd build
   - make
